--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,11 @@
 
 # basic settings
 title: "Luique - CV Resume & Personal Portfolio Jekyll Theme"
-email: "your-email@example.com"
+email: "2000gj.choi@gmail.com"
 description: "Jekyll Resume / CV / vCard / Portfolio and Personal Portfolio by bslthemes"
 author: "Luique"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://YOUR_ID.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://choi-gj.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 date_format: "%Y-%m-%d"
 
 # paginations & permalinks
