--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,10 @@
 # in the templates via {{ site.myvariable }}.
 
 # basic settings
-title: "Luique - CV Resume & Personal Portfolio Jekyll Theme"
-email: "your-email@example.com"
-description: "Jekyll Resume / CV / vCard / Portfolio and Personal Portfolio by bslthemes"
-author: "Luique"
+title: "최경준 - 웹 개발자 포트폴리오오"
+email: "2000gj.choi@gmail.com"
+description: "웹 개발자 최경준의 개인 포트폴리오 및 이력서 웹사이트입니다."
+author: "최경준준"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://choi-gj.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 date_format: "%Y-%m-%d"
