--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@
 title: "최경준 - 웹 개발자 포트폴리오오"
 email: "2000gj.choi@gmail.com"
 description: "웹 개발자 최경준의 개인 포트폴리오 및 이력서 웹사이트입니다."
-author: "최경준준"
+author: "최경준"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://choi-gj.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 date_format: "%Y-%m-%d"
