--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,12 +10,12 @@ settings:
 preloader:
   logo:
     image: "assets/img/logo2.png"
-    alt: "Zoé Miller"
+    alt: "최경준"
 
 ### Header
 header:
   logo:
-    image: "assets/img/짱구.png"
+    image: "assets/img/logo.png"
     alt: "최경준"
 
 ### Social
@@ -39,16 +39,16 @@ footer:
 
 ### Portfolio Filters Settings
 portfolio:
-  layout: "list" # select works layout options: "Grid" or "List"
+  layout: "grid" # 옵션: "grid" 또는 "list"
   filters:
-    - name: "UI UX Design"
+    - name: "웹 개발"
+      slug: "web-development"
+
+    - name: "앱 개발"
+      slug: "app-development"
+
+    - name: "UI/UX 디자인"
       slug: "ui-ux-design"
 
-    - name: "Photography"
-      slug: "photography"
-
-    - name: "Development"
-      slug: "development"
-
-    - name: "Branding"
+    - name: "브랜딩"
       slug: "branding"
