--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -3,14 +3,14 @@
 ### use ui-text.yml file to quick change all default strings
 
 ui_text:
-  home:                 "Home"
-  blog:                 "Blog"
-  blog_subtitle:        "All the most current news and events of my life"
-  archive:              "Archive"
-  blog_post:            "Blog Post"
+  home:                 "홈"
+  blog:                 "블로그"
+  blog_subtitle:        "최신 소식과 기술 정보"
+  archive:              "보관소"
+  blog_post:            "블로그 글"
   by:                   "by"
-  share:                "Share"
-  share_on:             "Share on"
+  share:                "share"
+  share_on:             "share_on"
   tags:                 "Tags"
   prev:                 "Prev"
   next:                 "Next"
@@ -24,10 +24,10 @@ ui_text:
   your_subject:         "Your Subject"
   message:              "Message"
   your_message:         "Your Message"
-  send_message:         "Send Message"
-  accept_terms:         "* Accept the terms and conditions."
-  thanks_message:       "Thanks, your message is sent successfully."
-  see_project:          "View Project"
+  send_message:         "메시지 보내기"
+  accept_terms:         "*이용약관에 동의합니다."
+  thanks_message:       "메시지가 성공적으로 전송되었습니다다."
+  see_project:          "프로젝트 보기"
   new:                  "new"
   search:               "Search ..."
   recent_posts:         "Recent Posts"
@@ -37,5 +37,5 @@ ui_text:
   works_subtitle:       "my <b>Cases</b>"
   works_bg_title:       "Portfolio"
   all:                  "All"
-  read_more:            "Read More"
+  read_more:            "더 읽기"
   live_preview:         "Live Preview"
