--- a/_data/content.yml
+++ b/_data/content.yml
@@ -101,7 +101,7 @@ skills:
 ### Resume [ resume ]
 resume:
   title: "이력서"
-  subtitle: "학력 및 <b>경력</b>"
+  subtitle: "학력 및 경력"
   bg_title: "History"
 
   education:
@@ -251,7 +251,7 @@ blog:
 ### Contact [ contacts ]
 contacts:
   title: "연락하기"
-  subtitle: "<b>문의</b>하기"
+  subtitle: "문의하기"
   bg_title: "Contact Me"
 
   list:
