--- a/_data/content.yml
+++ b/_data/content.yml
@@ -107,15 +107,15 @@ resume:
   education:
     title: "학력"
     items:
-      - name: "서울대학교"
-        subname: "컴퓨터공학과"
-        period: "2015 - 2019"
-        text: "컴퓨터 과학 학사 학위 취득. 웹 개발 동아리 활동 및 교내 해커톤 우승 경험. 졸업 프로젝트로 AI 기반 추천 시스템 개발."
+      - name: "한국폴리텍대학교"
+        subname: "사이버보안과"
+        period: "2024 - 2025"
+        text: "강서캠퍼스 사이버보안과 2학년 재학중입니다."
 
-      - name: "디지털 고등학교"
-        subname: "정보통신과"
-        period: "2012 - 2015"
-        text: "정보통신 전문 교육 이수. 전국 IT 경진대회 장려상 수상."
+      - name: "가림고등학교"
+        subname: "이과"
+        period: "2016 - 2019"
+        text: "가림고등학교에서 이과 졸업하였습니다"
 
       # - name: "IT Future"
       #   subname: "High School"
@@ -124,16 +124,16 @@ resume:
 
   experience:
     title: "경력"
-    items:
-      - name: "개발자"
-        subname: "ABC 테크놀로지"
-        period: "2021 - <b>현재</b>"
-        text: "프론트엔드 팀 리드 역할. React 기반 대시보드 시스템 설계 및 개발. 5명의 주니어 개발자 멘토링. 코드 리뷰 프로세스 도입으로 버그 30% 감소 달성."
+    # items:
+    #   - name: "개발자"
+    #     subname: "ABC 테크놀로지"
+    #     period: "2021 - <b>현재</b>"
+    #     text: "프론트엔드 팀 리드 역할. React 기반 대시보드 시스템 설계 및 개발. 5명의 주니어 개발자 멘토링. 코드 리뷰 프로세스 도입으로 버그 30% 감소 달성."
 
-      - name: "웹 개발자"
-        subname: "XYZ 스튜디오"
-        period: "2019 - 2021"
-        text: "React와 Node.js를 활용한 웹 애플리케이션 개발. RESTful API 설계 및 구현. 사용자 경험 개선으로 전환율 15% 향상."
+    #   - name: "웹 개발자"
+    #     subname: "XYZ 스튜디오"
+    #     period: "2019 - 2021"
+    #     text: "React와 Node.js를 활용한 웹 애플리케이션 개발. RESTful API 설계 및 구현. 사용자 경험 개선으로 전환율 15% 향상."
 
       # - name: "Plugins Developer"
       #   subname: "Fiverr.com"
@@ -151,27 +151,27 @@ testimonials:
     - image: "assets/img/testimonials/testi4-2.jpg"
       name: "Barbara Wilson"
       role: "CEO Company"
-      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+      text: "깔끔한 UI로 만족도 높은 서비스를 제공받았습니다."
 
     - image: "assets/img/testimonials/testi4-1.jpg"
       name: "Charlie Smith"
       role: "Designer"
-      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+      text: "완성도 높은 프로젝트로 믿고 맡길 수 있습니다."
 
-    - image: "assets/img/testimonials/testi4-4.jpg"
-      name: "Roy Wang"
-      role: "Manager GYM"
-      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    # - image: "assets/img/testimonials/testi4-4.jpg"
+    #   name: "Roy Wang"
+    #   role: "Manager GYM"
+    #   text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
 
-    - image: "assets/img/testimonials/testi4-3.jpg"
-      name: "Jennifer Smith"
-      role: "CEO &amp; Founder"
-      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    # - image: "assets/img/testimonials/testi4-3.jpg"
+    #   name: "Jennifer Smith"
+    #   role: "CEO &amp; Founder"
+    #   text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
 
-    - image: "assets/img/testimonials/testi4-5.jpg"
-      name: "Paul Freeman"
-      role: "Photographer"
-      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    # - image: "assets/img/testimonials/testi4-5.jpg"
+    #   name: "Paul Freeman"
+    #   role: "Photographer"
+    #   text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
 
 
 ### Pricing [ pricing ]
